clmpkg/objects/Agreement_Rec__c.object
<CustomObject>
    <description>Agreement Recipient Status from Docusign Connect integration.</description>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Recipient Status</relationshipLabel>
        <relationshipName>Agreement_Recipient_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Declined__c</fullName>
        <label>Date Declined</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Delivered__c</fullName>
        <label>Date Delivered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Signed__c</fullName>
        <label>Date Signed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Declined_Reason__c</fullName>
        <label>Declined Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_Recipient_Email__c</fullName>
        <label>Docusign Recipient Email</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Docusign_Routing_Order__c</fullName>
        <label>Docusign Routing Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Envelope_ID__c</fullName>
        <label>Envelope ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Email__c</fullName>
        <label>Recipient Email</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Status__c</fullName>
        <label>Recipient Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Agreement Recipient Status</label>
    <nameField>
        <label>Agreement Rec Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Recipient Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>